--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,6 @@
 {
-  "plugins": [
-    [
-      "module-resolver",
-      {
-        "root": ["."],
-        "alias": {
-          "@": "./src",
-        }
-      }
-    ]
-  ]
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
 }
